--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Random Card Generator</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -12,17 +12,19 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+
+  <body class="bg-success">
+    <div class="container-fluid d-flex justify-content-center text-center">
+      <div class="card text-center w-25 mt-5">
+        <div class="d-flex h-25 justify-content-start align-items-start">
+          <div class="ms-3 display-2" id="card-palo-top"></div>
+        </div>
+        <div class="d-flex h-50 align-items-center">
+          <div class="card-body my-5 display-1 fw-bold" id="card-number"></div>
+        </div>
+        <div class="d-flex h-25 justify-content-end align-items-end">
+          <div class="me-3 display-2" id="card-palo-bottom"></div>
+        </div>
       </div>
     </div>
   </body>
